--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <version>7.6.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
 
     </dependencies>
 
